# Document  $Id$
# Summary   File changelog for the chemical-mime-data project.

2007-10-16 Daniel Leidert <daniel.leidert@wgdd.de>

	* xsl/cmd_gnome-keys.xsl (cm:icon, fdo:comment): Fixed output format.

	* src/chemical-mime-database.xml.in: Simple typo fix in the DTD
	description.

2007-06-30 Daniel Leidert <daniel.leidert@wgdd.de>

	* src/chemical-mime-database.xml.in (chemical/x-gaussian-log): Added
	missing conflicts for text/x-log.

2007-06-30 Daniel Leidert <daniel.leidert@wgdd.de>

	* .cvsignore: Removed. Instead set the svn:ignore property
	accordingly.

	* HACKING: Turned off keyword substitution for Id to preserve file
	content.

2007-06-29 Daniel Leidert <daniel.leidert@wgdd.de>

	* TODO: Added some items.

	* src/chemical-mime-database.xml.in (chemical/x-gaussian-log): Added
	.log and .out extensions. Thanks to Armando Navarro Vázquez and Brian
	Salter-Duke.

2007-05-20 Daniel Leidert <daniel.leidert@wgdd.de>

	* html_docs/index.html: Added some information about the mailing
	lists.

2007-05-20 Daniel Leidert <daniel.leidert@wgdd.de>

	* xsl/Makefile.am (EXTRA_DIST): Fixed the cmd_mime_types.xsl
	inclusion.

2007-05-20 Daniel Leidert <daniel.leidert@wgdd.de>

	* TODO: Added two items.

	* Makefile.am (SUBDIRS):
	* configure.ac (AC_CONFIG_FILES):
	* xsl/cmd_mime_types.xsl:
	* xsl/Makefile.am (EXTRA_DIST):
	* mime-support/Makefile.am: Added support for creating a mime.types
	file.

	* configure.ac: Added a new variable for mime.type related tests.

	* file/Makefile.am:
	* freedesktop.org/Makefile.am:
	* html_docs/Makefile.am: Improved target syntax.

	* src/Makefile.am (all-local): Replaced with BUILT_SOURCES to make
	sure, it is built at the beginning.

	* src/chemical-mime-database.xml.in (cm:conflicts): Added a mimetypes
	attribute to declare a conflict with the mime.types file.
	(application/x-jmol-voxel): Fixed specification element.
	(chemical/x-daylight-smiles, chemical/x-mdl-sdfile, chemical/x-mif)